[workspace]
members = [
    "runtime/astar",
    "vendor/runtime/evm_tracer",
    "vendor/primitives/ext",
    "vendor/primitives/rpc/debug",
    "vendor/primitives/rpc/txpool",
    "vendor/primitives/rpc/evm-tracing-events",
]

[profile.release]
# Astar runtime requires unwinding.
panic = "unwind"

[workspace.dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.0", default-features = false, features = ["derive"] }
smallvec = "1.6.1"

# primitives
fp-rpc = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.19", default-features = false }
fp-self-contained = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.19", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }

# frame dependencies
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-base-fee = { git="https://github.com/AstarNetwork/frontier", branch="polkadot-v0.9.19", default-features=false }
pallet-ethereum = { git="https://github.com/AstarNetwork/frontier", branch="polkadot-v0.9.19", default-features=false }
pallet-evm = { git="https://github.com/AstarNetwork/frontier", branch="polkadot-v0.9.19", default-features=false }
pallet-evm-precompile-blake2 = { git="https://github.com/AstarNetwork/frontier", branch="polkadot-v0.9.19", default-features=false }
pallet-evm-precompile-bn128 = { git="https://github.com/AstarNetwork/frontier", branch="polkadot-v0.9.19", default-features=false }
pallet-evm-precompile-dispatch = { git="https://github.com/AstarNetwork/frontier", branch="polkadot-v0.9.19", default-features=false }
pallet-evm-precompile-ed25519 = { git="https://github.com/AstarNetwork/frontier", branch="polkadot-v0.9.19", default-features=false }
pallet-evm-precompile-modexp = { git="https://github.com/AstarNetwork/frontier", branch="polkadot-v0.9.19", default-features=false }
pallet-evm-precompile-simple = { git="https://github.com/AstarNetwork/frontier", branch="polkadot-v0.9.19", default-features=false }
pallet-evm-precompile-sha3fips = { git="https://github.com/AstarNetwork/frontier", branch="polkadot-v0.9.19", default-features=false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false, features = ["historical"] }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }

# cumulus dependencies
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19", default-features = false }

# polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.19" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.19" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.19" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.19" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.19" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.19" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.19" }

# benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }

# try-runtime
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }

# Astar pallets
pallet-block-reward = { git = "https://github.com/AstarNetwork/astar-frame", branch ="polkadot-v0.9.19", default-features = false }
pallet-collator-selection = { git = "https://github.com/AstarNetwork/astar-frame", branch = "pallet-collator-selection-3.0.0/polkadot-v0.9.19", default-features = false }
pallet-custom-signatures = { git = "https://github.com/AstarNetwork/astar-frame", branch = "polkadot-v0.9.19", default-features = false }
pallet-vesting = { git = "https://github.com/AstarNetwork/astar-frame", branch = "polkadot-v0.9.19", default-features = false }
pallet-dapps-staking = { git = "https://github.com/AstarNetwork/astar-frame", branch = "pallet-dapps-staking-3.2.3/polkadot-v0.9.19", default-features = false }
pallet-precompile-dapps-staking = { git = "https://github.com/AstarNetwork/astar-frame", branch = "pallet-dapps-staking-3.2.3/polkadot-v0.9.19", default-features = false }
pallet-evm-precompile-sr25519 = { git = "https://github.com/AstarNetwork/astar-frame", branch = "polkadot-v0.9.19", default-features = false }
pallet-evm-precompile-assets-erc20 = { git = "https://github.com/AstarNetwork/astar-frame", branch = "polkadot-v0.9.19", default-features = false }

# EVM tracing
moonbeam-evm-tracer = { path = "vendor/runtime/evm_tracer", default-features = false }
moonbeam-primitives-ext = { path = "vendor/primitives/ext", default-features = false }
moonbeam-rpc-primitives-debug = { path = "vendor/primitives/rpc/debug", default-features = false }
moonbeam-rpc-primitives-txpool = { path = "vendor/primitives/rpc/txpool", default-features = false }
evm-tracing-events = { path = "vendor/primitives/rpc/evm-tracing-events", default-features = false }

hex = "0.4"
num_enum = { version = "0.5.3", default-features = false }
rlp = { version = "0.5",  default-features = false }
serde = { version = "1.0.101",  default-features = false, features = [ "derive" ] }
sha3 = { version = "0.10",  default-features = false }
environmental = { version = "1.1.2", default-features = false }
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["derive"] }

evm = { version = "0.35.0", default-features = false }
evm-runtime = { version = "0.35.0", default-features = false }
evm-gasometer = { version = "0.35.0", default-features = false }

ethereum = { version = "0.12.0", default-features = false }
ethereum-types = { version = "0.13.1", default-features = false }

fp-evm = { git="https://github.com/AstarNetwork/frontier", branch="polkadot-v0.9.19", default-features=false }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
