[workspace]
members = [
    "runtime/astar",
    "vendor/runtime/evm_tracer",
    "vendor/primitives/ext",
    "vendor/primitives/rpc/debug",
    "vendor/primitives/rpc/txpool",
    "vendor/primitives/rpc/evm-tracing-events",
]

[profile.release]
# Astar runtime requires unwinding.
panic = "unwind"

[patch.crates-io]
evm = { git = "https://github.com/AstarNetwork/evm", rev = "d83f8f43699ceaa3f19f7c17d909dd079c482420" }
evm-runtime = { git = "https://github.com/AstarNetwork/evm", rev = "d83f8f43699ceaa3f19f7c17d909dd079c482420" }
evm-gasometer = { git = "https://github.com/AstarNetwork/evm", rev = "d83f8f43699ceaa3f19f7c17d909dd079c482420" }
ethereum = { git = "https://github.com/AstarNetwork/ethereum", rev = "2b98173bd88c05bfeefad421d260101b9008497b" }

[patch."https://github.com/PlasmNetwork/evm"]
evm = { git = "https://github.com/AstarNetwork/evm", rev = "d83f8f43699ceaa3f19f7c17d909dd079c482420" }
evm-runtime = { git = "https://github.com/AstarNetwork/evm", rev = "d83f8f43699ceaa3f19f7c17d909dd079c482420" }
evm-gasometer = { git = "https://github.com/AstarNetwork/evm", rev = "d83f8f43699ceaa3f19f7c17d909dd079c482420" }

[patch."https://github.com/PlasmNetwork/ethereum"]
ethereum = { git = "https://github.com/AstarNetwork/ethereum", rev = "2b98173bd88c05bfeefad421d260101b9008497b" }

[patch."https://github.com/PlasmNetwork/frontier"]
fp-rpc = { git = "https://github.com/AstarNetwork/frontier", rev = "d08ed161bf32f83c74f5394c92996475701f136e" }
fp-evm = { git = "https://github.com/AstarNetwork/frontier", rev = "d08ed161bf32f83c74f5394c92996475701f136e" }
fp-self-contained = { git = "https://github.com/AstarNetwork/frontier", rev = "d08ed161bf32f83c74f5394c92996475701f136e" }
pallet-ethereum = { git = "https://github.com/AstarNetwork/frontier", rev = "d08ed161bf32f83c74f5394c92996475701f136e" }
pallet-evm = { git = "https://github.com/AstarNetwork/frontier", rev = "d08ed161bf32f83c74f5394c92996475701f136e" }
pallet-evm-precompile-bn128 = { git = "https://github.com/AstarNetwork/frontier", rev = "d08ed161bf32f83c74f5394c92996475701f136e" }
pallet-evm-precompile-dispatch = { git = "https://github.com/AstarNetwork/frontier", rev = "d08ed161bf32f83c74f5394c92996475701f136e" }
pallet-evm-precompile-modexp = { git = "https://github.com/AstarNetwork/frontier", rev = "d08ed161bf32f83c74f5394c92996475701f136e" }
pallet-evm-precompile-simple = { git = "https://github.com/AstarNetwork/frontier", rev = "d08ed161bf32f83c74f5394c92996475701f136e" }
pallet-evm-precompile-sha3fips = { git = "https://github.com/AstarNetwork/frontier", rev = "d08ed161bf32f83c74f5394c92996475701f136e" }

[workspace.dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
evm = { git = "https://github.com/PlasmNetwork/evm", branch = "polkadot-v0.9.13", default-features = false, features = ["with-codec"] }
smallvec = "1.6.1"

# primitives
fp-rpc = { git = "https://github.com/PlasmNetwork/frontier", branch = "polkadot-v0.9.13", default-features = false }
fp-self-contained = { git = "https://github.com/PlasmNetwork/frontier", branch = "polkadot-v0.9.13", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

# frame dependencies
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-ethereum = { git="https://github.com/PlasmNetwork/frontier", branch="polkadot-v0.9.13", default-features=false }
pallet-evm = { git="https://github.com/PlasmNetwork/frontier", branch="polkadot-v0.9.13", default-features=false }
pallet-evm-precompile-bn128 = { git="https://github.com/PlasmNetwork/frontier", branch="polkadot-v0.9.13", default-features=false }
pallet-evm-precompile-dispatch = { git="https://github.com/PlasmNetwork/frontier", branch="polkadot-v0.9.13", default-features=false }
pallet-evm-precompile-modexp = { git="https://github.com/PlasmNetwork/frontier", branch="polkadot-v0.9.13", default-features=false }
pallet-evm-precompile-simple = { git="https://github.com/PlasmNetwork/frontier", branch="polkadot-v0.9.13", default-features=false }
pallet-evm-precompile-sha3fips = { git="https://github.com/PlasmNetwork/frontier", branch="polkadot-v0.9.13", default-features=false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false, features = ["historical"] }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

# cumulus dependencies
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }

# polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.13" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.13" }

# benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

# Astar pallets
pallet-block-reward = { git = "https://github.com/AstarNetwork/astar-frame", tag = "pallet-block-reward-3.0.0/polkadot-0.9.13", default-features = false }
pallet-collator-selection = { git = "https://github.com/AstarNetwork/astar-frame", tag = "pallet-collator-selection-3.0.0/polkadot-0.9.13", default-features = false }
pallet-custom-signatures = { git = "https://github.com/AstarNetwork/astar-frame", tag = "pallet-custom-signatures-4.3.0/polkadot-0.9.13", default-features = false }
pallet-dapps-staking = { git = "https://github.com/AstarNetwork/astar-frame", tag = "pallet-dapps-staking-1.1.2/polkadot-0.9.13", default-features = false }
pallet-vesting = { git = "https://github.com/AstarNetwork/astar-frame", tag = "pallet-vesting-4.0.0-dev/polkadot-0.9.13", default-features = false }

# EVM tracing
moonbeam-evm-tracer = { path = "vendor/runtime/evm_tracer", default-features = false }
moonbeam-primitives-ext = { path = "vendor/primitives/ext", default-features = false }
moonbeam-rpc-primitives-debug = { path = "vendor/primitives/rpc/debug", default-features = false }
moonbeam-rpc-primitives-txpool = { path = "vendor/primitives/rpc/txpool", default-features = false }
evm-tracing-events = { path = "vendor/primitives/rpc/evm-tracing-events", default-features = false }

hex = "0.4"
num_enum = { version = "0.5.3", default-features = false }
rlp = { version = "0.5",  default-features = false }
serde = { version = "1.0.101",  default-features = false, features = [ "derive" ] }
sha3 = { version = "0.10",  default-features = false }
environmental = { version = "1.1.2", default-features = false }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }

evm-runtime = { git = "https://github.com/PlasmNetwork/evm", branch = "polkadot-v0.9.13", default-features = false }
evm-gasometer = { git = "https://github.com/PlasmNetwork/evm", branch = "polkadot-v0.9.13", default-features = false }

ethereum = { git = "https://github.com/AstarNetwork/ethereum", branch = "polkadot-v0.9.13", default-features = false }
ethereum-types = { version = "0.12", default-features = false }

fp-evm = { git="https://github.com/PlasmNetwork/frontier", branch="polkadot-v0.9.13", default-features=false }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
